Added links to projects

--- a/index.html
+++ b/index.html
@@ -226,21 +226,18 @@
             <div class="card-container">
                 <div class="project-card">
                     <h2>Colmar Academy</h2>
-                    <p>Fictional Website</p>
-                    <!-- To add project link -->
-                    <button><a href="/" target="_blank">View</a></button>
+                    <p>My First Webpage created by using HTML and CSS</p>
+                    <button><a href="https://boonyaweeing.github.io/Colmar-Academy/" target="_blank">View</a></button>
                 </div>
                 <div class="project-card">
-                    <h2>Jammming</h2>
-                    <p>Spotify Playlist Application</p>
-                    <!-- To add project link -->
-                    <button><a href="/" target="_blank">View</a></button>
+                    <h2>Adhoc</h2>
+                    <p>Fictional Webpage created by using HTML, CSS and Bootstrap</p>
+                    <button><a href="https://boonyaweeing.github.io/Adhoc/" target="_blank">View</a></button>
                 </div>
                 <div class="project-card">
                     <h2>Viv</h2>
                     <p>Exercise Tracker</p>
-                    <!-- To add project link -->
-                    <button><a href="/" target="_blank">View</a></button>
+                    <button><a href="https://final-project-viv-application.vercel.app/" target="_blank">View</a></button>
                 </div>
             </div>
         </div>
